# quadruped-robot-dog

./: CMakeLists.txt  README.md  Thigh_Panel_Female_V2.stl  package.xml
CAD/: 20T_Pulley_Mount_V1.stl  Hip_Shroud_V1.stl  Knee_Pin_V1.stl  LegV1Assembly.f3z  LegV1Assembly.step  LegV1Assembly.stl  Lower_Leg_V1.stl  RobStride02_Actuator.stl  Thigh_Panel_Male_V2.stl  Thigh_Pulley_Mount_V1.stl
config/: controllers.yaml
launch/: display.launch.py  gazebo.launch.py
meshes/: 20T_Pulley_Dimensions.stl  30T_Pulley_Dimension.stl  scan_stl_bounds.py
results/loaded_validation/: loaded_leg_validation_20260513_211723.csv  loaded_leg_validation_20260513_212137.csv  loaded_leg_validation_20260513_212510.csv  loaded_leg_validation_20260513_212915.csv  loaded_leg_validation_20260513_213318.csv  loaded_leg_validation_20260513_213949.csv  loaded_leg_validation_20260513_214243.csv
results/temp_joint_logs/: joint_response_20260513_190329.csv  joint_response_20260513_190901.csv  joint_response_20260513_190916.csv  joint_response_20260513_190930.csv
rviz/: display.rviz  display_working.rviz
scripts/: ground_bounce_ik.py  ik_foot_pose.py  loaded_leg_cycle_test.py  loaded_leg_validation.py  log_joint_response.py  send_leg_pose.py  test_leg_motion.py
worlds/: single_leg_empty.world
xacro/: const.xacro  leg.xacro  leg_working_FIXED_HIP_ACTUATOR_correct_rotation.xacro  leg_working_mesh_aligned_backup.xacro  materials.xacro  robot.xacro  robot_working_mesh_aligned_backup.xacro  ros2_control.xacro
